Project structure updates
* Restore multi-module project
* Update copyright headers
* Return model classes to the main repository
* Add OFX Parser to the project